Added add hotel functionality
