# api/controllers/hotels/HotelsController.js
@@ -20,6 +20,26 @@ module.exports = function HotelsController(config,
             });
     };
 
+    this.post = function(req) {
+        var name = self.helpersUtil.fromModelVal(req.body.name);
+        var address = self.helpersUtil.fromModelVal(req.body.address);
+        var phone = self.helpersUtil.fromModelVal(req.body.phone);
+        var intro = self.helpersUtil.fromModelVal(req.body.intro);
+        var url = self.helpersUtil.fromModelVal(req.body.url);
+
+        if(!name || !address) {
+            throw self.exceptionFac.createInstance('E0021', 400);
+        }
+
+        return self.hotelDataAccessService.addHotel({
+            name: name,
+            address: address,
+            phone: phone,
+            intro: intro,
+            url: url
+        });
+    };
+
 
 };
 
